[package]
include = ["src/**/*", "Cargo.toml"]
name = "pulr"
version = "1.0.5"
edition = "2018"

[dependencies]
pl = { path = "lib/pl" }
plctag = { path = "lib/plctag" }

serde = { version =  "1.0", features = ["derive"] }
serde_yaml = "0.8"
rmodbus = "0.5.1"
ieee754 = "0.2.6"
argparse = "0.2.2"
snmp = "0.2.2"
