[package]
name = "pl"
version = "0.1.0"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transform = { path = "../transform" }

colored = "2"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.15"
