[package]
name = "ndj2influx"
version = "1.0.0"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.15"
colored = "2"
argparse = "0.2.2"
base64 = "0.12.3"
ureq = "1.4.0"
